# flirtlib

./: .gitignore  CMakeLists.txt  README  package.xml
cmake/: Config.cmake.in
doc/: Doxyfile
src/: CMakeLists.txt  LICENSE  LICENSE_SHORT  insertLicense  mainpage.h
src/applications/: CMakeLists.txt
src/build_tools/: FindQwt5.cmake
src/feature/: AbstractFeatureSetMatcher.cpp  AbstractFeatureSetMatcher.h  BetaGrid.cpp  BetaGrid.h  CMakeLists.txt  CurvatureDetector.cpp  CurvatureDetector.h  Descriptor.h  Detector.h  InterestPoint.cpp  InterestPoint.h  MultiScaleDetector.cpp  MultiScaleDetector.h  NormalBlobDetector.cpp  NormalBlobDetector.h  NormalDetector.cpp  NormalDetector.h  NormalEdgeDetector.cpp  NormalEdgeDetector.h  RangeDetector.cpp  RangeDetector.h  RansacFeatureSetMatcher.cpp  RansacFeatureSetMatcher.h  RansacLoopClosureDrawMovie.cpp  RansacLoopClosureTest.cpp  RansacMultiFeatureSetMatcher.cpp  RansacMultiFeatureSetMatcher.h  ShapeContext.cpp  ShapeContext.h
src/geometry/: CMakeLists.txt  point.cpp  point.h
src/gui/: AbstractRenderer.h  BetaGridPresenter.cpp  BetaGridPresenter.h  BoxParameterWidget.cpp  BoxParameterWidget.h  CMakeLists.txt  Color.cpp  Color.h  CorrespondenceRenderer.cpp  CorrespondenceRenderer.h  DescriptorChooserPresenter.cpp  DescriptorChooserPresenter.h  DescriptorPresenter.h  DescriptorWidget.cpp  DescriptorWidget.h  DetectorChooserPresenter.cpp  DetectorChooserPresenter.h  DetectorPresenter.h  FLIRTDemo.cpp  FLIRTDemo.h  FeatureSetMatcherPresenter.cpp  FeatureSetMatcherPresenter.h  InterestPointRenderer.cpp  InterestPointRenderer.h  LaserReadingRenderer.cpp  LaserReadingRenderer.h  MultiScaleCurvatureDetectorPresenter.cpp  MultiScaleCurvatureDetectorPresenter.h  MultiScaleDetectorPlotWidget.cpp  MultiScaleDetectorPlotWidget.h  MultiScaleDetectorPresenter.cpp  MultiScaleDetectorPresenter.h  MultiScaleNormalDetectorPresenter.cpp  MultiScaleNormalDetectorPresenter.h  ParameterWidget.cpp  ParameterWidget.h  PeakFinderPresenter.h  PolarGridGraphicsItem.cpp  PolarGridGraphicsItem.h  PolarGridRenderer.cpp  (+13 more)
src/sensors/: AbstractReading.cpp  AbstractReading.h  CMakeLists.txt  LaserReading.cpp  LaserReading.h
src/sensorstream/: CMakeLists.txt  CarmenLog.cpp  CarmenLog.h  LogReader.h  LogSensorStream.cpp  LogSensorStream.h  LogWriter.h  SensorStream.h
src/utils/: CMakeLists.txt  Convolution.h  Convolution.hpp  HistogramDistances.h  HistogramDistances.hpp  PeakFinder.h  PoseEstimation.cpp  PoseEstimation.h  Regression.cpp  Regression.h  SimpleMinMaxPeakFinder.cpp  SimpleMinMaxPeakFinder.h  SimplePeakFinder.cpp  SimplePeakFinder.h
